# AI-MASTERY-COURSE

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FINAL_REPORT.md  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
audits/: comparison-matrix.md  coverage-score.json  expansion-plan.md  external-resource-comparison.md  latest-coverage-score.json  maximum-ai-library-audit.md  totality-score-methodology.md
automation/: README.md  config.example.yaml  config.yaml  cron.example  daily_knowledge_expansion.py  daily_news_update.py  run_coverage_audit.py
docs/: automation.md  citation-policy.md  content-guidelines.md  contribution-guide.md  copyright-policy.md  cron-setup.md  github-actions.md  github-setup.md  installation.md  local-development.md  maintenance.md  publishing-website.md  running-labs.md  source-policy.md  troubleshooting.md
glossary/: README.md  global-glossary.md
memory/: course-map.json  deprecated-content.json  missing-topics.json  priority-queue.json  source-index.json  topic-index.json  update-history.json
references/: benchmarks.md  books.md  courses.md  datasets.md  frameworks.md  papers.md  people-and-labs.md
research/: benchmarks-and-datasets.md  forums-and-communities.md  foundational-papers.md  modern-papers.md  news-sources.md  open-courses.md  pending-verification.md  recommended-books.md  research-log.md  source-map.md  tools-and-frameworks.md  trend-watch.md  youtube-sources.md
scripts/: install_cron.sh
(+368 files in other folders)
